added swndgrid and forget password

--- a/JWTauthWebAPI/appsettings.json
+++ b/JWTauthWebAPI/appsettings.json
@@ -15,5 +15,12 @@
     "Issuer": "jwt-api-access-token-api",
     "Audience": "jwt-api-access-token-client",
     "Subject": "jwt-api-access-token"
+  },
+  "ExternalProviders": {
+    "SendGrid": {
+      "ApiKey": "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",
+      "SenderEmail": "khaledul.islam@hotmail.com",
+      "SenderName": "Md Khaledul Islam"
+    }
   }
 }
